# KeyEcho

./: .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CustomSounds.md  README.md  UPDATELOG.md  commitlint.config.mjs  components.json  eslint.config.mjs  index.html  lint-staged.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.mjs  tsconfig.json  uno.config.ts  unocss.config.ts  vite.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/build-for-linux/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: release.yml  signing-test.yml
docs/: custom-sounds.md  performance.md
docs/assets/: keyecho-hero.html  keyecho-og.html
scripts/: install-derived-press-release-packs.ts  install-lossless-v2-packs.ts  install-model-m-test-pack.ts  press-release-split.test.ts  press-release-split.ts  release-notes.test.ts  release-notes.ts  updater.test.ts  updater.ts
src/: App.tsx  App.vue  buy.ts  deeplink.ts  main.ts  main.tsx  origin.ts  preview.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.appstore.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: deep-link.json  default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: cherrymx-black-abs.tar  cherrymx-black-pbt.tar  cherrymx-blue-abs.tar  cherrymx-blue-pbt.tar  cherrymx-brown-abs.tar  cherrymx-brown-pbt.tar  cherrymx-red-abs.tar  cherrymx-red-pbt.tar  eg-crystal-purple.tar  eg-oreo.tar  nk-cream.tar
src-tauri/resources/cherrymx-black-abs/: config.json
src-tauri/src/: global_state.rs  main.rs  setup.rs
src-tauri/src/commands/: error.rs  mod.rs
src-tauri/src/features/: autostart.rs  mod.rs  tray.rs  updater.rs  window.rs
src-tauri/src/keyecho/: decoder.rs  echo.rs  mod.rs  sound_decoder.rs  soundpack.rs
src-tauri/src/keyecho/listen_key/: mod.rs
src-tauri/src/keyecho/listen_key/platform_impl/: linux.rs  macos.rs  windows.rs
src-tauri/src/keyecho/soundpack/: decoder.rs  mod.rs  sound.rs
src/assets/: index.css
src/components/: OnlineSoundModal.vue
src/components/ui/button/: Button.vue  index.ts
src/components/ui/checkbox/: Checkbox.vue
src/components/ui/dialog/: Dialog.vue  DialogContent.vue  DialogDescription.vue  DialogFooter.vue  DialogHeader.vue  DialogScrollContent.vue  DialogTitle.vue
src/components/ui/scroll-area/: ScrollArea.vue  ScrollBar.vue
src/components/ui/select/: SelectContent.vue  SelectGroup.vue  SelectItem.vue  SelectLabel.vue  SelectScrollDownButton.vue  SelectScrollUpButton.vue  SelectSeparator.vue  SelectTrigger.vue
src/components/ui/separator/: Separator.vue
src/components/ui/slider/: Slider.vue
src/components/ui/switch/: Switch.vue
src/components/ui/toast/: Toast.vue  ToastAction.vue  ToastClose.vue  ToastDescription.vue  ToastProvider.vue  ToastTitle.vue  ToastViewport.vue  Toaster.vue  index.ts  use-toast.ts
src/composables/: useCommonToast.ts
src/lib/: utils.ts
src/modules/: prime.ts
src/pages/dashboard/: AutoLaunch.vue  DownloadSoundDialog.vue  Logo.vue  SettingItem.vue  Volume.vue  index.vue
src/pages/dashboard/sound/: DownloadButton.vue  DownloadDialog.vue  Select.vue
src/presets/lara/: global.ts  index.ts
src/presets/lara/components/: button.ts  dialog.ts  dropdown.ts  toast.ts
src/presets/lara/directives/: ripple.ts
src/services/: bindings.test.ts  bindings.ts
src/types/: app.d.ts  auto-imports.d.ts  components.d.ts
