[package]
name = "keyecho"
edition = "2021"
version = "0.0.4"
authors = ["Zachary"]
description = "KeyEcho"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
  "window-all",
  "shell-execute",
  "process-exit",
  "updater",
  "process-relaunch",
  "system-tray",
] }

specta = "2.0.0-rc.7"
tauri-specta = { version = "=2.0.0-rc.4", features = ["typescript"] }

tar = "0"
anyhow = "1"
thiserror = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
strum = { version = "0", features = ["derive"] }
lru = { version = "0", default-features = false }
reqwest = { version = "0.11", default-features = false, features = [
  "stream",
  "native-tls",
] }

rodio = { version = "0", default-features = false }
symphonia = { version = "0", default-features = false, features = [
  "ogg",
  "vorbis",
] }

tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0", features = [
  "winuser",
  "errhandlingapi",
  "processthreadsapi",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
core-graphics = { version = "0.22", features = ["highsierra"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0"
openssl = { version = "0.10", features = ["vendored"] }
x11 = { version = "2", features = ["xlib", "xrecord", "xinput"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[features]
custom-protocol = ["tauri/custom-protocol"]
