[package]
name = "keyecho"
edition = "2021"
version = "1.0.0"
authors = ["Zachary"]
description = "KeyEcho"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-updater = "2.10.1"

tar = "0.4.46"
anyhow = "1.0.102"
thiserror = "2.0.18"
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
reqwest = { version = "0.13.4", default-features = false, features = [
  "stream",
  "native-tls",
] }

rodio = { git = "https://github.com/RustAudio/rodio.git", default-features = false, features = ["playback"] }
symphonia = { version = "0.6.0", default-features = false, features = [
  "ogg",
  "vorbis",
] }
arc-swap = "1.9.1"
crossbeam-channel = "0.5.15"
tauri-plugin-process = "2.3.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = [
  "winuser",
  "errhandlingapi",
  "processthreadsapi",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.25.0", features = ["highsierra"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
openssl = { version = "0.10.81", features = ["vendored"] }
x11 = { version = "2.21.0", features = ["xlib", "xrecord", "xinput"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[features]
custom-protocol = ["tauri/custom-protocol"]
